<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/uploadd_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/atk"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="@color/brown"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/atk"
            android:padding="5dp"
            android:text="@string/description"
            android:textColor="@color/brown"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/vegetarianCheckboxDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/atk"
                android:text="@string/vegetarian" />

            <CheckBox
                android:id="@+id/veganCheckboxDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/atk"
                android:text="@string/vegan" />

        </LinearLayout>

        <TextView
            android:id="@+id/ingredientsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/atk"
            android:text="@string/ingredients"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/atk"
                android:padding="5dp"
                android:text="@string/ingredientsdot"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/directionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/atk"
            android:text="@string/directions"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/directionsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/atk"
                android:padding="5dp"
                android:text="@string/directionsdot"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/brown"
                android:fontFamily="@font/atk"
                android:text="@string/Return"
                android:textSize="16sp" />

            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:backgroundTint="@color/brown"
                android:fontFamily="@font/atk"
                android:text="@string/edit"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/favoriteDetailsBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/favorite"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_star_border_24" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
