<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.menu.MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/myrecipe"
            android:textColor="@color/brown"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/circleButtonContainerVertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView">

            <LinearLayout
                android:id="@+id/firstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/brown"
                    android:fontFamily="@font/atk"
                    android:text="@string/flavorful_chicken_recipes"
                    android:textSize="16sp"
                    app:cornerRadius="30dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/brown"
                    android:fontFamily="@font/atk"
                    android:text="@string/tasty_meat_recipes"
                    android:textSize="16sp"
                    app:cornerRadius="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/brown"
                    android:fontFamily="@font/atk"
                    android:text="@string/fresh_veggie_recipes"
                    android:textSize="16sp"
                    app:cornerRadius="30dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/brown"
                    android:fontFamily="@font/atk"
                    android:text="@string/find_recipes_by_location"
                    android:textSize="16sp"
                    app:cornerRadius="30dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/my_recipe_btn"
            android:layout_width="280dp"
            android:layout_height="92dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/brown"
            android:fontFamily="@font/atk"
            android:text="@string/my_recipesb"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circleButtonContainerVertical" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
