<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <ImageButton
                    android:id="@+id/recipe_image_input"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/uploadd_image"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/recipe_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:background="@android:color/white"
                    android:fontFamily="@font/atk"
                    android:gravity="start"
                    android:hint="@string/enter_recipe_name"
                    android:lines="1"
                    android:maxLength="45"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/recipe_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/white"
                    android:fontFamily="@font/atk"
                    android:gravity="top|start"
                    android:hint="@string/enter_recipe_description"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:maxLength="120"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:scrollHorizontally="false"
                    android:textColor="@color/brown"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/vegetarian_checkbox_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/brown"
                        android:fontFamily="@font/atk"
                        android:text="@string/vegetarian"
                        android:textColor="@color/brown"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/vegan_checkbox_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/brown"
                        android:fontFamily="@font/atk"
                        android:text="@string/vegan"
                        android:textColor="@color/brown"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/atk"
                android:text="@string/ingredients"
                android:textColor="@color/brown"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/ingredients_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/white"
                    android:fontFamily="@font/atk"
                    android:gravity="top"
                    android:hint="@string/enter_the_list_of_ingredient"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/brown"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/directions_title_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/atk"
                android:text="@string/directions"
                android:textColor="@color/brown"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/directions_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/white"
                    android:fontFamily="@font/atk"
                    android:gravity="top"
                    android:hint="@string/enter_the_directions"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/brown"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/save_recipe_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/brown"
                android:fontFamily="@font/atk"
                android:text="@string/save_recipe"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
