<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardBackgroundColor="@color/brown"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/recipe_image_card"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_emoji_food_beverage_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/amatic_bold"
                android:maxLines="1"
                android:padding="3dp"
                android:text="@string/recipe_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:fontFamily="@font/amatic_bold"
                android:maxLines="2"
                android:padding="3dp"
                android:text="@string/recipe_description"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/favorite_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/favorite"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_star_border_24"
            app:tint="@color/cream" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
